[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/spider/hand.png" type="Texture" id=1]
[ext_resource path="res://scenes/tasks/spider/Hand.gd" type="Script" id=2]
[ext_resource path="res://assets/shaders/hit_flash.tres" type="Material" id=3]

[node name="Hand" type="Area2D" groups=["hand"]]
z_index = 1
collision_layer = 3
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -45, 125, -100, 67, -119, -14, -68, 44, -42, -120, -15, -22, 23, -139, 30, -22, 80, -105, 67, 5, 128, -37, 41, 125, 5, 137 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ITimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IFlashInterval" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="ITimer" to="." method="_on_ITimer_timeout"]
[connection signal="timeout" from="IFlashInterval" to="." method="_on_IFlashInterval_timeout"]
